# crud_application

./: .env  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile
backend/app/: alembic.ini  prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: a12fc618288d_init.py
backend/app/app/: backend_pre_start.py  main.py
backend/app/app/api/: base_handler.py  base_routing.py  handlers.py  utils.py
backend/app/app/api/api_v1/endpoints/: __init__.py  msg.py  statistic.py
backend/app/app/api/base/: __init__.py  base_path_utils.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  base.py  msg.py
backend/app/app/db/: base.py  session.py  utils.py
backend/app/app/models/: __init__.py  msg.py
backend/app/app/schemas/: __init__.py  msg.py
