[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ['']

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.1"
requests = "^2.23.0"
pydantic = "^1.4"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
tenacity = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
